Disable PDP11 assembly targets
PDP11 tools are not available.

--- a/Xinu/sys/shell/Makefile
+++ b/Xinu/sys/shell/Makefile
@@ -12,7 +12,8 @@ AS	=	as
 LD	=	ld
 AR	=	ar
 LORDER	=	$(BINDIR)/lorder11
-RANLIB	=	$(BINDIR)/ranlib11
+#RANLIB	=	$(BINDIR)/ranlib11
+RANLIB	=	echo "Skipping ranlib11 - PDP11 tools not available"
 CPRINT	=	$(BINDIR)/cprint
 SIZE	=	$(BINDIR)/size11
 LIB	=	$(DIR)/lib
